# otomata-tools

./: .gitignore  CLAUDE.md  LICENSE  PLAN.md  README.md  TODO.md  pyproject.toml
docs/: concepts.md  create-connector.md  gmail-oauth-setup.md  gmail.md  google-docs.md  google-service-account-setup.md  installation.md  zoho-desk-oauth-setup.md
oto/: __init__.py  cli.py  config.py
oto/commands/: anthropic.py  browser.py  company.py  config.py  data.py  enrichment.py  google.py  notion.py  pennylane.py  search.py  sirene.py  skills.py  slack.py  whatsapp.py  zohodesk.py
oto/tools/: __init__.py
oto/tools/anthropic/: __init__.py  client.py
oto/tools/apollo/: __init__.py  client.py
oto/tools/attio/: client.py
oto/tools/browser/: __init__.py  crunchbase.py  g2.py  indeed.py  linkedin.py  pappers.py
oto/tools/collective/: __init__.py  client.py
oto/tools/common/: rate_limiter.py
oto/tools/datastore/: __init__.py  client.py
oto/tools/figma/: __init__.py
oto/tools/folk/: __init__.py  client.py
oto/tools/gemini/: __init__.py
oto/tools/google/: credentials.py
oto/tools/hunter/: __init__.py
oto/tools/kaspr/: client.py
oto/tools/lemlist/: client.py
oto/tools/notion/: append_blocks.py  append_blocks_chunked.py  count_database_entries.py  create_database_from_csv.py  create_page.py  list_teamspaces.py  query_database.py  tool.yaml  update_page.py
oto/tools/pennylane/: client.py
oto/tools/phantombuster/: __init__.py  client.py
oto/tools/resend/: client.py
oto/tools/serpapi/: client.py
oto/tools/serper/: __init__.py
oto/tools/sirene/: stock.py
oto/tools/slack/: __init__.py  client.py
oto/tools/unsplash/: client.py
oto/tools/whatsapp/: __init__.py  client.py
oto/tools/wttj/: __init__.py  client.py
oto/tools/zerobounce/: __init__.py  client.py
oto/tools/zohodesk/: __init__.py  client.py
otomata/: __init__.py  cli.py  config.py
otomata/tools/anthropic_batch/: __init__.py  client.py
otomata/tools/attio/: __init__.py  client.py
otomata/tools/browser/: __init__.py  crunchbase.py  g2.py  indeed.py  linkedin.py  pappers.py
otomata/tools/clearbit/: __init__.py  client.py
otomata/tools/collective/: client.py
otomata/tools/common/: __init__.py
otomata/tools/crunchbase/: __init__.py  client.py
otomata/tools/figma/: client.py
otomata/tools/g2/: __init__.py  client.py
otomata/tools/gemini/: client.py
otomata/tools/google/: __init__.py  credentials.py
otomata/tools/groq/: __init__.py  client.py
otomata/tools/hithorizons/: __init__.py  client.py
otomata/tools/hunter/: client.py
otomata/tools/indeed/: __init__.py  client.py
otomata/tools/kaspr/: __init__.py  client.py
otomata/tools/lemlist/: __init__.py  client.py
otomata/tools/linkedin/: __init__.py  client.py
otomata/tools/mistral/: __init__.py  client.py
otomata/tools/naf/: __init__.py  suggester.py
otomata/tools/notion/: README.md  get_database.py  get_page.py  known-pages.md  notion  search.py
otomata/tools/pappers/: __init__.py  client.py
otomata/tools/pennylane/: __init__.py  client.py
otomata/tools/resend/: __init__.py
otomata/tools/serpapi/: __init__.py
otomata/tools/serper/: client.py
otomata/tools/sirene/: __init__.py  client.py  entreprises.py  stock.py
otomata/tools/unsplash/: __init__.py
scripts/: migrate_timetrack.py
skills/oto-anthropic/: SKILL.md
skills/oto-browser/: SKILL.md
skills/oto-enrichment/: SKILL.md
skills/oto-google/: SKILL.md
skills/oto-notion/: SKILL.md
skills/oto-pennylane/: SKILL.md
skills/oto-search/: SKILL.md
skills/oto-sirene/: SKILL.md
skills/oto-whatsapp/: SKILL.md
skills/oto-zohodesk/: SKILL.md
(+79 files in other folders)
