[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "otomata"
version = "0.1.0"
description = "CLI tools for automating tasks with Google, Notion, and more"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Alexis Laporte" }
]
dependencies = [
    "typer>=0.9.0",
    "requests>=2.28.0",
    "google-auth>=2.0.0",
    "google-api-python-client>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
browser = [
    "patchright>=1.0.0",
]
marketing = [
    "requests>=2.28.0",
]
crm = [
    "requests>=2.28.0",
]
communication = [
    "requests>=2.28.0",
    "resend>=0.7.0",
]
company-fr = [
    "requests>=2.28.0",
]
search = [
    "requests>=2.28.0",
]
media = [
    "requests>=2.28.0",
]
ai = [
    "anthropic>=0.40.0",
]
all = [
    "otomata[browser,marketing,crm,communication,company-fr,search,media,ai]",
]
dev = [
    "pytest>=7.0.0",
    "black",
    "ruff",
]

[project.scripts]
otomata = "otomata.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["otomata"]
