[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oto"
dynamic = ["version"]
description = "CLI tools for automating tasks with Google, Notion, and more"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Alexis Laporte" }
]
dependencies = [
    "typer>=0.9.0",
    "requests>=2.28.0",
    "google-auth>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
    "google-api-python-client>=2.0.0",
    "gkeepapi>=0.16.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
browser = [
    "o-browser",
]
marketing = [
    "requests>=2.28.0",
]
crm = [
    "requests>=2.28.0",
]
communication = [
    "requests>=2.28.0",
    "resend>=0.7.0",
]
company-fr = [
    "requests>=2.28.0",
]
stock = [
    "pyarrow>=10.0.0",
    "pandas>=1.5.0",
]
search = [
    "requests>=2.28.0",
]
media = [
    "requests>=2.28.0",
]
ai = [
    "anthropic>=0.40.0",
]
pennylane = [
    "requests>=2.28.0",
]
all = [
    "oto[browser,marketing,crm,communication,company-fr,search,media,ai,pennylane]",
]

[project.scripts]
oto = "oto.cli:main"

[tool.hatch.version]
path = "oto/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["oto"]
